prevent form buttons from wrapping

--- a/components/CreateList/CreateList.module.css
+++ b/components/CreateList/CreateList.module.css
@@ -59,6 +59,10 @@
 	animation: widen 3s forwards;
 }
 
+.buttonWrapper {
+	white-space: nowrap;
+}
+
 .buttonWrapper button + button {
 	margin-left: 0.5rem;
 }
